# conformer_toolkit

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
src/: README.md  benchmark_rdkit_vs_cpp.py  benchmark_rdkit_vs_cpp_explained.md  build_pybind.py  conformer_deduplicate.cpp  conformer_deduplicate_explained.md  conformer_identical.cpp  conformer_identical_explained.md  conformer_toolkit_bindings.cpp  deduplicate_rdkit.py  deduplicate_rdkit_explained.md  knn_k_optimizer.py  test_cpp.py  test_python_api.py
src/conformer_toolkit/: __init__.py  deduplicate_rdkit.py  validation.py
src/testdata/: benzene_ordered.xyz  benzene_reordered.xyz  chiral_bromochlorofluoromethane_r.xyz  chiral_bromochlorofluoromethane_r_reordered.xyz  chiral_bromochlorofluoromethane_s.xyz  dichloroethene_e.xyz  dichloroethene_z.xyz  ethanol_reordered.sdf  h2_a.xyz  h2_energies.xyz  h2_multi.xyz  h2_stretched.xyz  h2_symbol_mismatch.xyz  h2_translated.xyz  hcl_a.xyz  hcl_reordered.xyz  propane_ordered.xyz  propane_reordered.xyz  toluene_ordered.xyz  toluene_reordered.xyz
tutorials/: 01_cpp_python_interface.ipynb  02_knn_k_optimizer.ipynb  03_rdkit_sdf_deduplication.ipynb  README.md
tutorials/.ipynb_checkpoints/: 01_cpp_python_interface-checkpoint.ipynb
